...
    <string name="new_email_notification">you have new email from: </string>
    <string name="get_email">Get Email</string>
    <string name="bother_parrents">do you really want to bother them?</string>
    <string name="update_Diary_Item">update</string>
    <string name="delete_Diary_Item">delete</string>
    <string name="reallyUpdate">update?</string>
    <string name="Yes">Yes</string>
    <string name="reallyDelete">Delete?</string>
    <string name="go_to_emailBox">....GO TO YOUR EMAIL BOX TO SEE THE REST</string>
    <string name="sign_in">Sign in</string>
    <string name="SignInCancled">signing in was cancled</string>
    <string name="sing_out">Sign out</string>
    <string name="welcome">welcome to flash communication app</string>
    <string name="welcomeMessage">Welcome</string>
</resources>
